# my-own-cdk-template

./: .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  setup.cfg
cdk/: stack.py
docs/: pipeline.drawio
src/: sample_lambda.py
tests/unit/: test_stack.py
