[metadata]
name = gbt
version = 0.0.1

[options]
packages = find:

install_requires =
    aws-cdk-lib==2.64.0
    constructs>=10.0.0,<11.0.0
    boto3==1.24.7
    botocore>=1.27.7,<1.28.0
    himl==0.11.0
    psycopg2==2.9.5
    alembic==1.9.4
    SQLAlchemy==2.0.4

[options.extras_require]
dev =
    pyclean==2.2.0
    black==23.1.0
    flake8==6.0.0
    pre-commit==2.20.0
    pytest==7.2.0
    pytest-mock==3.7.0
    pytest-cov==3.0.0
    moto==3.1.7
    build==0.9.0
    coverage==6.5.0
    bandit==1.7.4
    behave==1.2.6

    mkdocs==1.1.2
    mkdocs-material==7.1.5
    mkdocs-minify-plugin==0.4.0
    mkdocs-git-revision-date-localized-plugin==0.9.2
    mkdocs-git-authors-plugin==0.3.3
    mkdocs-table-reader-plugin==0.5
    mkdocs-img2fig-plugin==0.9.3
    mknotebooks==0.7.0
    mkdocs-awesome-pages-plugin==2.5.0
    mkdocs-enumerate-headings-plugin==0.4.4
    mkdocs-print-site-plugin==1.2.3
    mkgendocs==0.8.1

[coverage:path]
source =
    cdk/
    src/

[coverage:run]
omit =
    tests/*

[coverage:html]
directory = .htmlcov

[flake8]
ignore = F403,F405,W503,F811,E203
max-line-length = 88

[isort]
line_length=88
known_third_party = aws_cdk,boto3,constructs,himl,psycopg2,pytest
skip=build,.tox,.venv,.pgpsql,.drawio
profile = black
